Fix overflow

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -180,3 +180,7 @@ header {
 
 .tetto {
   padding-left: 5vw; }
+
+body {
+  overflow: auto;
+  overflow-x: hidden; }
